Fit video to player container and adjust styling for mobile

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <!-- https://assets.mixkit.co/videos/4075/4075-720.mp4 -->
     <!-- Calm sea with paddleboarder: -->
     <!-- https://assets.mixkit.co/videos/2079/2079-720.mp4 -->
+
+    <div class="player">
+        <!-- On mobile devices, when you click "play" it will go to full-screen view by default, which is why we need playsinline attribute here: -->
+        <video src="https://assets.mixkit.co/videos/41576/41576-720.mp4" class="video" playsinline></video>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
