--- a/index.html
+++ b/index.html
@@ -19,6 +19,55 @@
     <div class="player">
         <!-- On mobile devices, when you click "play" it will go to full-screen view by default, which is why we need playsinline attribute here: -->
         <video src="https://assets.mixkit.co/videos/41576/41576-720.mp4" class="video" playsinline></video>
+        <div class="show-controls">
+            <div class="controls-container">
+                <!-- Progress bar: -->
+                <div class="progress-range" title="Seek">
+                    <div class="progress-bar"></div>
+                </div>
+                <!-- Grouping controls to be split between left and right side of player: -->
+                <div class="control-group">
+                    <!-- Left side controls: -->
+                    <div class="controls-left">
+                        <div class="play-controls">
+                            <!-- Play/pause: -->
+                            <i class="fas fa-play" title="Play" id="play-btn"></i>
+                            <!-- Volume: -->
+                            <div class="volume">
+                                <div class="volume-icon">
+                                    <i class="fas fa-volume-up" title="Mute" id="volume-icon"></i>
+                                    <div class="volume-range" title="Change Volume">
+                                        <div class="volume-bar"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Right side controls: -->
+                    <div class="controls-right">
+                        <!-- Speed: -->
+                        <div class="speed" title="Playback Rate">
+                            <select name="playbackRate" class="player-speed">
+                                <option value="0.5">0.5x</option>
+                                <option value="0.75">0.75x</option>
+                                <option value="1" selected>1x</option>
+                                <option value="1.5">1.5x</option>
+                                <option value="2">2x</option>
+                            </select>
+                        </div>
+                        <!-- Time: -->
+                        <div class="time">
+                            <span class="time-elapsed">00:00 / </span>
+                            <span class="time-duration">2:38</span>
+                        </div>
+                        <!-- Fullscreen toggle: -->
+                        <div class="fullscreen">
+                            <i class="fas fa-expand"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
