Add changeVolume function/event listener; add videos with sound

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
     <!-- https://assets.mixkit.co/videos/4075/4075-720.mp4 -->
     <!-- Calm sea with paddleboarder: -->
     <!-- https://assets.mixkit.co/videos/2079/2079-720.mp4 -->
+    <!-- Videos with sound – glucophone: -->
+    <!-- https://pixabay.com/videos/hang-glucophone-musical-instrument-30902/ -->
+    <!-- Videos with sound – singing bowl: -->
+    <!-- https://pixabay.com/videos/singing-bowl-kundalini-meditation-63229/ -->
 
     <div class="player">
         <!-- On mobile devices, when you click "play" it will go to full-screen view by default, which is why we need playsinline attribute here: -->
-        <video src="https://assets.mixkit.co/videos/41576/41576-720.mp4" class="video" playsinline></video>
+        <video src="videos/glucophone.mp4" class="video" playsinline></video>
         <div class="show-controls">
             <div class="controls-container">
                 <!-- Progress bar: -->
