Add toggleMute function and event listener

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- https://pixabay.com/videos/hang-glucophone-musical-instrument-30902/ -->
     <!-- Videos with sound – singing bowl: -->
     <!-- https://pixabay.com/videos/singing-bowl-kundalini-meditation-63229/ -->
-
+    <h1>please enjoy a peaceful moment</h1>
     <div class="player">
         <!-- On mobile devices, when you click "play" it will go to full-screen view by default, which is why we need playsinline attribute here: -->
-        <video src="videos/glucophone.mp4" class="video" playsinline></video>
+        <video src="videos/singing-bowl.mp4" class="video" playsinline></video>
         <div class="show-controls">
             <div class="controls-container">
                 <!-- Progress bar: -->
