--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="greeting">
-            <h1>please enjoy a peaceful moment</h1>
+            <h1>please enjoy a mindful moment.</h1>
         </div>
     </div>
     <script src="script.js"></script>
